KSBWI-963 fixed artifacts over BlendedBackground on Firefox

--- a/src/js/Components/BlendedBackground.scss
+++ b/src/js/Components/BlendedBackground.scss
@@ -10,6 +10,9 @@
    min-width: 100%;
    min-height: 100%;
    overflow: hidden;
+
+   // fixes artifacts over BlendedBackground on Firefox KSBWI-963
+   -moz-transform: translateZ(1px);
 }
 
 .background {
